<resources>
    <string name="app_name">Jadwal Sepak Bola</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_match">LastMatch</string>
    <string name="upcoming_match">NextMatch</string>
    <string name="previous_match">Previous Match</string>
    <string name="next_match">Next Match</string>
    <string name="liga">List Liga</string>
    <string name="lineup">Line Up</string>
    <string name="kiper">Penjaga Gawang</string>
    <string name="gk">Curtois</string>
    <string name="back">Sergio Ramos</string>
    <string name="centerBack">Bek</string>
    <string name="gelandang">Gelandang</string>
    <string name="gelandangtengah">Tony Kross</string>
    <string name="Forward">Penyerang</string>
    <string name="depan">Benzema</string>
    <string name="Subtitutes">Cadangan</string>
    <string name="cadanganPemain">Gareth Bale</string>
    <string name="goal">50\':Eden Hazard</string>
    <string name="team">Real Madrid</string>
    <string name="dateMatch">10 Desember 2019</string>
    <string name="ligagojek">Liga Gojek</string>
    <string name="favorite">Favorite</string>
    <string name="teams">Team</string>
    <string name="namanya">Nama Team</string>
    <string name="stadium">Stadium</string>
    <string name="managernya">Managernya</string>
    <string-array name="league_name">
        <item>Liga Inggris</item>
        <item>Liga Francis</item>
        <item>Liga Germany</item>
        <item>Liga Italia</item>
        <item>Liga Spanyol</item>
        <item>Liga America</item>
        <item>Liga Portugal</item>
        <item>Liga Australia</item>
        <item>Liga Scotlaindia</item>
        <item>Liga English League 1</item>
    </string-array>
    <string-array name="idLeague">
        <item>4328</item>
        <item>4484</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4395</item>
        <item>4396</item>
    </string-array>
</resources>