<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="20dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cardContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            android:elevation="6dp">

            <TextView
                android:id="@+id/tanggalMatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                tools:text="@string/dateMatch" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearCard"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/kandang"
                        android:layout_width="90dp"
                        android:layout_height="90dp" />
                    <TextView
                        android:id="@+id/namaTeamKandang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/black"
                        tools:text="@string/team"/>
                    <TextView
                        android:id="@+id/goalKandang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        tools:text="@string/goal"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/kandangScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0"
                        android:textColor="@color/black"
                        android:textSize="32sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="VS"
                        android:textColor="@color/cyan"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TandangScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0"
                        android:textColor="@color/black"
                        android:textSize="32sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/tandang"
                        android:layout_width="90dp"
                        android:layout_height="90dp" />
                    <TextView
                        android:id="@+id/namaTeamTandang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginTop="4dp"
                        tools:text="@string/team"/>
                    <TextView
                        android:id="@+id/goalTandang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        tools:text="@string/goal"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/lineup"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/gkKandang"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/gk" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/cyan"
                android:textStyle="bold"
                android:text="@string/kiper"/>
            <TextView
                android:id="@+id/gkTandang"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/gk"
                android:textAlignment="textEnd" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bekKandang"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/back" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/cyan"
                android:text="@string/centerBack"/>
            <TextView
                android:id="@+id/bekTandang"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/back"
                android:textAlignment="textEnd" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/GelandangKandang"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/gelandangtengah"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/cyan"
                android:textStyle="bold"
                android:text="@string/gelandang"/>
            <TextView
                android:id="@+id/GelandangTandang"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/gelandangtengah"
                android:textAlignment="textEnd"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/penyerangKandang"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/depan" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/cyan"
                android:textStyle="bold"
                android:text="@string/Forward"/>
            <TextView
                android:id="@+id/peyerangTandang"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/depan"
                android:textAlignment="textEnd"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/Subtitutes"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cadanganKandang"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/cadanganPemain"
                />
            <TextView
                android:id="@+id/cadanganTandang"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/cadanganPemain"
                android:textAlignment="textEnd"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>