<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.teamovw.TeamOvwFragment">

    <ImageView
        android:id="@+id/imgBadge"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"/>
    <TextView
        android:id="@+id/nameTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/imgBadge"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textStyle="bold"
        tools:text="@string/namanya"/>
    <TextView
        android:id="@+id/stadium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameTeam"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textColor="#000000"
        tools:text="@string/stadium"/>

    <TextView
        android:id="@+id/manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stadium"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:textColor="#000000"
        tools:text="@string/managernya"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/manager"
        android:elevation="4dp"
        android:id="@+id/previewContainer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/manager"
            android:orientation="vertical"
            android:paddingBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="#000000"
                android:text="Team Overview"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:background="#9b9898" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/teamPreview"
                android:textSize="13sp"
                android:textColor="#000000"
                android:text="Team Overview"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
</android.support.v4.widget.NestedScrollView>